# sirius_jazzy_ws

./: .gitignore  .gitmodules  EKF_TF_CONFIGURATION.md  README.md  THIRD_PARTY_NOTICES.md  bash.md  frames_2025-08-22_04.38.52.gv  frames_2025-10-10_15.54.14.gv  frames_2025-10-10_17.49.11.gv  frames_2025-10-12_02.06.39.gv  frames_2025-10-28_17.41.57.gv  frames_2025-10-30_12.25.48.gv  frames_2025-10-30_12.51.30.gv  frames_2025-10-30_14.24.21.gv  ビルドコマンド.txt  目標.md  起動コマンド.md
amcl_monitor_gui/: amcl_accuracy_monitor.py  requirements.txt
bash/: .bash_alias1  .bash_alias2  .bash_aliases  README.md  bash_alias1.sh  bash_alias2.sh  sim_sirius.bash  sim_sirius_advanced.bash  sirius_aliases.bash
bash/startup_bash/: change_map.sh  change_map_simple.sh  get_pos_dis.sh  get_pos_ent.sh  launch_simulation.sh  map_save.sh  move_goal.sh  nav2_bringup_real.sh  nav2_bringup_sim.sh  record_rosbag.sh  rtabmap_save.sh  sam3_colored_map_select.sh  start_ros_tcp.sh
docs/: system_diagram.md  system_diagram_paper.md  導入したもの.md  目標.md
maps_waypoints/keepout_mask/: keepout_mask.pgm  keepout_mask.yaml
maps_waypoints/maps/: 0422map.pgm  0422map.yaml  1202-15f-02.yaml  1202-15f.pgm  1202-15f.yaml  1203sim01.yaml  1203sim02.yaml  1206atc1f.yaml  1206atc1f2.yaml  1206atc2f.yaml  1207oit15f.pgm  1207oit15f.yaml  atc_11_29_1F.yaml  atc_11_29_2F.yaml  map.pgm  rtabmap_0421map.pgm  rtabmap_0421map.yaml  rtabmap_0422map.colored.json  rtabmap_0422map.colored.pgm  rtabmap_0422map.pgm  rtabmap_0422map.yaml  rtabmap_0422map2.colored.json  rtabmap_0422map2.colored.pgm  rtabmap_0422map2.pgm  rtabmap_0422map2.yaml  rtabmap_aaa.json  rtabmap_aaa.pgm  rtabmap_aaa.ply  rtabmap_aaa.yaml  rtabmap_bbbb.yaml  rtabmap_cccccc.pgm  rtabmap_cccccc.ply  rtabmap_cccccc.yaml  rtabmap_ddddd.colored.json  rtabmap_ddddd.colored.pgm  rtabmap_ddddd.pgm  rtabmap_ddddd.ply  rtabmap_ddddd.yaml
maps_waypoints/waypoints/: 0120-15f-2.yaml  0128oit15f03.yaml  0315-OIT15F.yaml  0423.yaml  0508-15f.yaml  120-15f.yaml  1202-15f-01.yaml  1202-15f-02.yaml  1203sim01.yaml  1203sim02.yaml  1204-15f.yaml  1206atc1f.yaml  1206atc1f2.yaml  1206atc2f.yaml  1207oit15f.yaml  1207oit15f2.yaml  1228_oit_15F.yaml  new_waypoints.yaml  raw_waypoints.yaml  waypoints.yaml
other_programs/amcl_monitor_gui/: README.md  amcl_accuracy_monitor.py
other_programs/pgm_to_sdf/: pgm_to_sdf.py  pgm_to_stl.py  stl_to_sdf.py
other_programs/satellite/: README.md  demo.rviz  download_tiles.py
other_programs/sirius_launcher/: README.md  alias_parser.py  process_manager.py  sirius_launcher.py  sirius_launcher_newtab.py  sirius_launcher_simple.py  ui_components.py
other_programs/view_nav2_tasks/: bt_log_viewer.py
params/: ekf.yaml  ekf_fusion.yaml  imu_filter.yaml  keepout_params.yaml  mapper_params_online_async.yaml  mapper_params_online_async_sim.yaml  nav2_params.yaml  nav2_params_honban.yaml  nav2_params_humble.yaml  nav2_params_no_keepout.yaml  nav2_params_sim.yaml  wt905.yaml
satellite/: OFFLINE_MAP_README.md  README.md  demo.launch.xml  demo_offline.launch.xml  demo_offline.rviz  launch_offline.sh  tile_server.py
sirius_backup/sirius_interfaces/: CMakeLists.txt  package.xml
sirius_backup/sirius_interfaces/action/: PlayAudio.action
sirius_backup/sirius_interfaces/msg/: KeyboardInput.msg
sirius_backup/sirius_keyop/: package.xml
sirius_backup/sirius_keyop/include/sirius_keyop/: keyop.hpp
sirius_backup/sirius_keyop/src/: sirius_keyop.cpp
src/sirius/sirius_keyop/: CMakeLists.txt
src/sirius/sirius_keyop/include/sirius_keyop/: controller.hpp
src/sirius/sirius_keyop/src/: sirius_controller.cpp  sirius_keyop_v2.cpp
src/slam_toolbox/: README.md
tf/: frames_2025-10-30_14.41.16.gv
udevrules/: 99-hokuyo.rules  99-ichimill.rules  99-wt905.rules  README.md
view_nav2_tasks/: README_BT_VIEWER.md  bt_log_viewer_gui.py  bt_log_viewer_simple.py
(+61 files in other folders)
