<package format="2">
  <name>sirius_keyop</name>
  <version>1.0.0</version>
  <description>
    Keyboard teleoperation for Sirius: relays command from a keyboard to Sirius.
  </description>
  <author email="masima458@icloud.com">Shinnosuke Sakamoto</author>
  <maintainer email="masima458@icloud.com">Shinnosuke Sakamoto</maintainer>
  <license>OIT</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  
  <buildtool_depend>geometry_msgs</buildtool_depend>
  <buildtool_depend>rclcpp</buildtool_depend>
  <buildtool_depend>rclcpp_components</buildtool_depend>
  <buildtool_depend>ecl_build</buildtool_depend>
  <buildtool_depend>sirius_interfaces</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>cmd_vel_mux</exec_depend>
  <exec_depend>sirius_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>nav2_msgs</depend> 

  <export>
    <build_type>ament_cmake</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group> 
  </export>
</package>
